--- a/.gitignore
+++ b/.gitignore
@@ -276,7 +276,7 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit csv_list / coverage reports
 htmlcov/
 .tox/
 .nox/
